--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         </div>
       </header>
       <main>
-        <div class="bloco-msg">
+        <!-- <div class="bloco-msg">
           <div class="horario">(12:30:45)</div>
           <div class="nome"><span>João</span> Entra na sala...</div>
-          <!-- <div class="mensagem"> Entra na sala.</div> -->
-        </div>
+        </div> -->
       </main>
       <footer>
         <input type="text" placeholder="Escreva Aqui..." />
