add data test on main

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ion-icon class="people-sharp" name="people-sharp"></ion-icon>
         </div>
       </header>
-      <main>
+      <main data-test="message">
         <!-- <div class="bloco-msg">
           <div class="horario">(12:30:45)</div>
           <div class="nome"><span>João</span> Entra na sala...</div>
