add press enter to send message

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div> -->
       </main>
       <footer>
-        <input
+        <input class="inputText"
           type="text"
           placeholder="Escreva Aqui..."
           data-test="input-message"
